traces/bug_360.txt
src/medit/inout_morice.c:1008: error: DEAD_STORE
  The value written to &k (type int) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:1008:7: Write of unused value
1006.         assert(mesh->extra->nq);
1007.        
1008.         k=1;
              ^
1009.         getline_popen_firstelemnoref(natureread, 3, tvatn);
1010.         tvatn[0] = nq;
